# metaorder-modelling-gebbie-

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: metaorder_signal.tex
examples/: README.md  generate_synthetic_market.py  synthetic_demo.py  visualise_run.py
experiments/: README.md  run_empirical_study.py
notebooks/: metaorder_tuning_report.ipynb  metaorder_tuning_report_executed.ipynb  tuning_summary.json
src/metaorder_signal/: __init__.py  backtest.py  io_taq.py  losses.py  n_selection.py  powerlaw_fit.py  reconstruction.py  signal.py  synthetic_market.py  thesis_reconstruction.py  uct_auxiliary.py  volatility.py
src/metaorder_signal/empirical/: __init__.py  benchmarks.py  binance_public.py  calibration.py  metrics.py  runs.py  tuning.py
tests/: test_benchmarks.py  test_empirical.py  test_grid_preset.py  test_losses.py  test_signal.py  test_synthetic_market.py  test_thesis_reconstruction.py  test_tuning_smoke.py  test_volatility.py  test_write_dataset.py
visualisation/: README.md  visualise_panel_overview.py  visualise_run.py
