[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "metaorder-signal"
version = "0.1.0"
description = "LMF-structured metaorder detection signal and backtest from public TAQ-style data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "powerlaw>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
parquet = ["pyarrow>=14"]
notebook = ["jupyter>=1.0", "ipykernel>=6.0", "nbconvert>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
